integration-tests/tests/integration/snapshots/integration__config_paths__config_diagnostics_use_invocation_paths.snap
---
source: integration-tests/tests/integration/config_paths.rs
expression: "blocks.join(\"\\n\\n\")"
---
cwd: [TEMP_DIR]/src
--config-file: (none)
scenario: version-syntax
error: failed to parse nextest config at `[TEMP_DIR]/src/.config/nextest.toml`

Caused by:
  TOML parse error at line 1, column 20
    |
  1 | nextest-version = [
    |                    ^
  unclosed array, expected `]`

cwd: [TEMP_DIR]/src
--config-file: (none)
scenario: experimental
error: for config file `[TEMP_DIR]/src/.config/nextest.toml`, unknown experimental features defined: not-a-feature (known features: setup-scripts, wrapper-scripts, benchmarks):

cwd: [TEMP_DIR]/src
--config-file: (none)
scenario: deserialize
error: failed to parse nextest config at `[TEMP_DIR]/src/.config/nextest.toml`

Caused by:
  profile.default.retries: invalid type: string "bad", expected a table ({ backoff = "fixed", count = 5 }) or a number (5)

cwd: [TEMP_DIR]/src
--config-file: (none)
scenario: unknown-groups
warning: in config file .config/nextest.toml, ignoring unknown configuration key: unknown-key
warning: in config file .config/nextest.toml, ignoring unknown profiles in the reserved `default-` namespace:
warning:   default-foo
error: for config file `[TEMP_DIR]/src/.config/nextest.toml`, unknown test groups defined (known groups: @global):
 - group `missing-group` in overrides for profile `default`

cwd: [TEMP_DIR]/src
--config-file: .config/nextest.toml
scenario: version-syntax
error: failed to parse nextest config at `.config/nextest.toml`

Caused by:
  TOML parse error at line 1, column 20
    |
  1 | nextest-version = [
    |                    ^
  unclosed array, expected `]`

cwd: [TEMP_DIR]/src
--config-file: .config/nextest.toml
scenario: experimental
error: for config file `.config/nextest.toml`, unknown experimental features defined: not-a-feature (known features: setup-scripts, wrapper-scripts, benchmarks):

cwd: [TEMP_DIR]/src
--config-file: .config/nextest.toml
scenario: deserialize
error: failed to parse nextest config at `.config/nextest.toml`

Caused by:
  profile.default.retries: invalid type: string "bad", expected a table ({ backoff = "fixed", count = 5 }) or a number (5)

cwd: [TEMP_DIR]/src
--config-file: .config/nextest.toml
scenario: unknown-groups
warning: in config file .config/nextest.toml, ignoring unknown configuration key: unknown-key
warning: in config file .config/nextest.toml, ignoring unknown profiles in the reserved `default-` namespace:
warning:   default-foo
error: for config file `.config/nextest.toml`, unknown test groups defined (known groups: @global):
 - group `missing-group` in overrides for profile `default`

cwd: [TEMP_DIR]/src
--config-file: [TEMP_DIR]/src/.config/nextest.toml
scenario: version-syntax
error: failed to parse nextest config at `[TEMP_DIR]/src/.config/nextest.toml`

Caused by:
  TOML parse error at line 1, column 20
    |
  1 | nextest-version = [
    |                    ^
  unclosed array, expected `]`

cwd: [TEMP_DIR]/src
--config-file: [TEMP_DIR]/src/.config/nextest.toml
scenario: experimental
error: for config file `[TEMP_DIR]/src/.config/nextest.toml`, unknown experimental features defined: not-a-feature (known features: setup-scripts, wrapper-scripts, benchmarks):

cwd: [TEMP_DIR]/src
--config-file: [TEMP_DIR]/src/.config/nextest.toml
scenario: deserialize
error: failed to parse nextest config at `[TEMP_DIR]/src/.config/nextest.toml`

Caused by:
  profile.default.retries: invalid type: string "bad", expected a table ({ backoff = "fixed", count = 5 }) or a number (5)

cwd: [TEMP_DIR]/src
--config-file: [TEMP_DIR]/src/.config/nextest.toml
scenario: unknown-groups
warning: in config file .config/nextest.toml, ignoring unknown configuration key: unknown-key
warning: in config file .config/nextest.toml, ignoring unknown profiles in the reserved `default-` namespace:
warning:   default-foo
error: for config file `[TEMP_DIR]/src/.config/nextest.toml`, unknown test groups defined (known groups: @global):
 - group `missing-group` in overrides for profile `default`

cwd: [TEMP_DIR]/src/nested/child
--config-file: (none)
scenario: version-syntax
error: failed to parse nextest config at `[TEMP_DIR]/src/.config/nextest.toml`

Caused by:
  TOML parse error at line 1, column 20
    |
  1 | nextest-version = [
    |                    ^
  unclosed array, expected `]`

cwd: [TEMP_DIR]/src/nested/child
--config-file: (none)
scenario: experimental
error: for config file `[TEMP_DIR]/src/.config/nextest.toml`, unknown experimental features defined: not-a-feature (known features: setup-scripts, wrapper-scripts, benchmarks):

cwd: [TEMP_DIR]/src/nested/child
--config-file: (none)
scenario: deserialize
error: failed to parse nextest config at `[TEMP_DIR]/src/.config/nextest.toml`

Caused by:
  profile.default.retries: invalid type: string "bad", expected a table ({ backoff = "fixed", count = 5 }) or a number (5)

cwd: [TEMP_DIR]/src/nested/child
--config-file: (none)
scenario: unknown-groups
warning: in config file .config/nextest.toml, ignoring unknown configuration key: unknown-key
warning: in config file .config/nextest.toml, ignoring unknown profiles in the reserved `default-` namespace:
warning:   default-foo
error: for config file `[TEMP_DIR]/src/.config/nextest.toml`, unknown test groups defined (known groups: @global):
 - group `missing-group` in overrides for profile `default`

cwd: [TEMP_DIR]/src/nested/child
--config-file: ../../.config/nextest.toml
scenario: version-syntax
error: failed to parse nextest config at `../../.config/nextest.toml`

Caused by:
  TOML parse error at line 1, column 20
    |
  1 | nextest-version = [
    |                    ^
  unclosed array, expected `]`

cwd: [TEMP_DIR]/src/nested/child
--config-file: ../../.config/nextest.toml
scenario: experimental
error: for config file `../../.config/nextest.toml`, unknown experimental features defined: not-a-feature (known features: setup-scripts, wrapper-scripts, benchmarks):

cwd: [TEMP_DIR]/src/nested/child
--config-file: ../../.config/nextest.toml
scenario: deserialize
error: failed to parse nextest config at `../../.config/nextest.toml`

Caused by:
  profile.default.retries: invalid type: string "bad", expected a table ({ backoff = "fixed", count = 5 }) or a number (5)

cwd: [TEMP_DIR]/src/nested/child
--config-file: ../../.config/nextest.toml
scenario: unknown-groups
warning: in config file ../../.config/nextest.toml, ignoring unknown configuration key: unknown-key
warning: in config file ../../.config/nextest.toml, ignoring unknown profiles in the reserved `default-` namespace:
warning:   default-foo
error: for config file `../../.config/nextest.toml`, unknown test groups defined (known groups: @global):
 - group `missing-group` in overrides for profile `default`

cwd: [TEMP_DIR]/src/nested/child
--config-file: [TEMP_DIR]/src/.config/nextest.toml
scenario: version-syntax
error: failed to parse nextest config at `[TEMP_DIR]/src/.config/nextest.toml`

Caused by:
  TOML parse error at line 1, column 20
    |
  1 | nextest-version = [
    |                    ^
  unclosed array, expected `]`

cwd: [TEMP_DIR]/src/nested/child
--config-file: [TEMP_DIR]/src/.config/nextest.toml
scenario: experimental
error: for config file `[TEMP_DIR]/src/.config/nextest.toml`, unknown experimental features defined: not-a-feature (known features: setup-scripts, wrapper-scripts, benchmarks):

cwd: [TEMP_DIR]/src/nested/child
--config-file: [TEMP_DIR]/src/.config/nextest.toml
scenario: deserialize
error: failed to parse nextest config at `[TEMP_DIR]/src/.config/nextest.toml`

Caused by:
  profile.default.retries: invalid type: string "bad", expected a table ({ backoff = "fixed", count = 5 }) or a number (5)

cwd: [TEMP_DIR]/src/nested/child
--config-file: [TEMP_DIR]/src/.config/nextest.toml
scenario: unknown-groups
warning: in config file .config/nextest.toml, ignoring unknown configuration key: unknown-key
warning: in config file .config/nextest.toml, ignoring unknown profiles in the reserved `default-` namespace:
warning:   default-foo
error: for config file `[TEMP_DIR]/src/.config/nextest.toml`, unknown test groups defined (known groups: @global):
 - group `missing-group` in overrides for profile `default`

cwd: [TEMP_DIR]
--config-file: (none)
scenario: version-syntax
error: failed to parse nextest config at `[TEMP_DIR]/src/.config/nextest.toml`

Caused by:
  TOML parse error at line 1, column 20
    |
  1 | nextest-version = [
    |                    ^
  unclosed array, expected `]`

cwd: [TEMP_DIR]
--config-file: (none)
scenario: experimental
error: for config file `[TEMP_DIR]/src/.config/nextest.toml`, unknown experimental features defined: not-a-feature (known features: setup-scripts, wrapper-scripts, benchmarks):

cwd: [TEMP_DIR]
--config-file: (none)
scenario: deserialize
error: failed to parse nextest config at `[TEMP_DIR]/src/.config/nextest.toml`

Caused by:
  profile.default.retries: invalid type: string "bad", expected a table ({ backoff = "fixed", count = 5 }) or a number (5)

cwd: [TEMP_DIR]
--config-file: (none)
scenario: unknown-groups
warning: in config file .config/nextest.toml, ignoring unknown configuration key: unknown-key
warning: in config file .config/nextest.toml, ignoring unknown profiles in the reserved `default-` namespace:
warning:   default-foo
error: for config file `[TEMP_DIR]/src/.config/nextest.toml`, unknown test groups defined (known groups: @global):
 - group `missing-group` in overrides for profile `default`

cwd: [TEMP_DIR]
--config-file: src/.config/nextest.toml
scenario: version-syntax
error: failed to parse nextest config at `src/.config/nextest.toml`

Caused by:
  TOML parse error at line 1, column 20
    |
  1 | nextest-version = [
    |                    ^
  unclosed array, expected `]`

cwd: [TEMP_DIR]
--config-file: src/.config/nextest.toml
scenario: experimental
error: for config file `src/.config/nextest.toml`, unknown experimental features defined: not-a-feature (known features: setup-scripts, wrapper-scripts, benchmarks):

cwd: [TEMP_DIR]
--config-file: src/.config/nextest.toml
scenario: deserialize
error: failed to parse nextest config at `src/.config/nextest.toml`

Caused by:
  profile.default.retries: invalid type: string "bad", expected a table ({ backoff = "fixed", count = 5 }) or a number (5)

cwd: [TEMP_DIR]
--config-file: src/.config/nextest.toml
scenario: unknown-groups
warning: in config file src/.config/nextest.toml, ignoring unknown configuration key: unknown-key
warning: in config file src/.config/nextest.toml, ignoring unknown profiles in the reserved `default-` namespace:
warning:   default-foo
error: for config file `src/.config/nextest.toml`, unknown test groups defined (known groups: @global):
 - group `missing-group` in overrides for profile `default`

cwd: [TEMP_DIR]
--config-file: [TEMP_DIR]/src/.config/nextest.toml
scenario: version-syntax
error: failed to parse nextest config at `[TEMP_DIR]/src/.config/nextest.toml`

Caused by:
  TOML parse error at line 1, column 20
    |
  1 | nextest-version = [
    |                    ^
  unclosed array, expected `]`

cwd: [TEMP_DIR]
--config-file: [TEMP_DIR]/src/.config/nextest.toml
scenario: experimental
error: for config file `[TEMP_DIR]/src/.config/nextest.toml`, unknown experimental features defined: not-a-feature (known features: setup-scripts, wrapper-scripts, benchmarks):

cwd: [TEMP_DIR]
--config-file: [TEMP_DIR]/src/.config/nextest.toml
scenario: deserialize
error: failed to parse nextest config at `[TEMP_DIR]/src/.config/nextest.toml`

Caused by:
  profile.default.retries: invalid type: string "bad", expected a table ({ backoff = "fixed", count = 5 }) or a number (5)

cwd: [TEMP_DIR]
--config-file: [TEMP_DIR]/src/.config/nextest.toml
scenario: unknown-groups
warning: in config file .config/nextest.toml, ignoring unknown configuration key: unknown-key
warning: in config file .config/nextest.toml, ignoring unknown profiles in the reserved `default-` namespace:
warning:   default-foo
error: for config file `[TEMP_DIR]/src/.config/nextest.toml`, unknown test groups defined (known groups: @global):
 - group `missing-group` in overrides for profile `default`
